# fitness-tracker-userver-mongo-db

./: CMakeLists.txt  Dockerfile  Makefile  README.md  data.js  data.sql  docker-compose.yaml  openapi.yaml  optimization.md  queries.js  queries.sql  schema.sql  schema_design.md  validation.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
src/: fitness_tracker.cpp  fitness_tracker.hpp  main.cpp
tests/: conftest.py  test_fitness_tracker.py
